[gd_scene load_steps=5 format=3 uid="uid://cjty4iiyklv2c"]

[ext_resource type="Script" uid="uid://bmlmt8b2dayxw" path="res://game_over.gd" id="1_gjgvn"]
[ext_resource type="Texture2D" uid="uid://dgvwqq74x6d8i" path="res://Animated Platformer Character/Gemini_Generated_Image_d6eyh9d6eyh9d6ey.png" id="2_1knfe"]

[sub_resource type="LabelSettings" id="LabelSettings_gjgvn"]
font_size = 70
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1knfe"]
font_size = 70
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gjgvn")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.643137)
layout_mode = 0
offset_left = 2.0
offset_top = -383.0
offset_right = 1915.0
offset_bottom = 1530.0
texture = ExtResource("2_1knfe")

[node name="CoinsLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1907.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 40
text = "0
"
label_settings = SubResource("LabelSettings_gjgvn")
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 105.0
offset_right = 1905.0
offset_bottom = 228.0
text = "0"
label_settings = SubResource("LabelSettings_1knfe")
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 737.0
offset_top = 453.0
offset_right = 1144.0
offset_bottom = 571.0
theme_override_font_sizes/font_size = 80
text = "Play Again"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 872.0
offset_top = 713.0
offset_right = 1022.0
offset_bottom = 831.0
theme_override_font_sizes/font_size = 80
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
